@@ -65,6 +65,7 @@ HEADERS	+= config.h \
 	basegui.h \
 	baseguiplus.h \
 	floatingcontrol.h \
+	widgetactions.h \
 	defaultgui.h
 
 
@@ -122,6 +123,7 @@ SOURCES	+= version.cpp \
 	basegui.cpp \
 	baseguiplus.cpp \
 	floatingcontrol.cpp \
+	widgetactions.cpp \
 	defaultgui.cpp \
 	main.cpp
 
